fixed scrolling error on mobile (TESTING 1)

--- a/public/page-template/template.css
+++ b/public/page-template/template.css
@@ -55,7 +55,6 @@ main {
     }
     
     main {
-        height: 100%;
-        overflow-y: hidden;
+        overflow-y: auto;
     }
 }
